--- a/phys/Makefile
+++ b/phys/Makefile
@@ -40,7 +40,7 @@ MODULES = \
 	module_bl_qnsepbl09.o \
 	module_bl_acm.o \
 	module_bl_mynn.o \
-        module_bl_fogdes.o \
+	module_bl_fogdes.o \
 	module_bl_gwdo.o \
 	module_bl_myjurb.o \
 	module_bl_boulac.o \
@@ -75,6 +75,8 @@ MODULES = \
         module_mp_etaold.o \
 	module_mp_HWRF.o \
 	module_mp_thompson.o \
+	module_mp_full_sbm.o \
+	module_mp_fast_sbm.o \
 	module_mp_gsfcgce.o \
 	module_mp_morr_two_moment.o \
 	module_mp_milbrandt2mom.o \
@@ -129,7 +131,7 @@ MODULES = \
 	module_sf_myjsfc.o \
 	module_sf_qnsesfc.o \
 	module_sf_mynn.o \
-        module_sf_fogdes.o \
+	module_sf_fogdes.o \
 	module_sf_pxsfclay.o \
 	module_sf_temfsfclay.o \
 	module_sf_idealscmsfclay.o \
