First steps to a more organized set of diagnostics.  We have a diagnostics driver that is called after all of the RK steps are completed (in EM).  The radar diags are called directly from the NMM solver - so as to minimize changes.
A    phys/module_diag_afwa.F
D    phys/module_diagnostics.F
A    phys/module_diag_misc.F
A    phys/module_diagnostics_driver.F
M    phys/Makefile
A    phys/module_diag_pld.F
A    phys/module_diag_refl.F
A    phys/module_diag_cl.F
M    main/depend.common
M    dyn_nmm/solve_nmm.F
M    dyn_nmm/depend.dyn_nmm
M    Registry/Registry.EM_COMMON
A    dyn_em/module_after_all_rk_steps.F
M    dyn_em/Makefile
M    dyn_em/solve_em.F
M    dyn_em/start_em.F
M    dyn_em/depend.dyn_em



git-svn-id: https://svn-wrf-model.cgd.ucar.edu/trunk@7078 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

--- a/phys/Makefile
+++ b/phys/Makefile
@@ -152,7 +152,6 @@ MODULES = \
 	module_mixactivate.o \
 	module_radiation_driver.o \
 	module_surface_driver.o \
-	module_diagnostics.o \
 	module_lightning_driver.o \
 	module_ltng_cpmpr92z.o \
 	module_ltng_crmpr92.o \
@@ -165,7 +164,8 @@ MODULES = \
 	module_wind_turbdragforce.o \
 	module_wind_generic.o \
 	module_wind_fitch.o  \
-        module_sf_lake.o
+        module_sf_lake.o \
+	module_diagnostics_driver.o
 
 FIRE_MODULES = \
         module_fr_fire_driver.o \
@@ -176,6 +176,15 @@ FIRE_MODULES = \
         module_fr_fire_phys.o \
         module_fr_fire_util.o
   
+DIAGNOSTIC_MODULES_EM = \
+	module_diag_afwa.o \
+	module_diag_cl.o \
+	module_diag_misc.o \
+	module_diag_pld.o
+  
+DIAGNOSTIC_MODULES_NMM = \
+	module_diag_refl.o
+
 OBJS    =
 
 NMM_MODULES =  
@@ -185,18 +194,22 @@ TARGETDIR    =  ./
 
 $(LIBTARGET) :
 		if [ $(WRF_NMM_CORE) -eq 1 ] ; then \
-                  $(MAKE) $(J) nmm_contrib                                      ; \
-                  $(AR) $(ARFLAGS) ../main/$(LIBWRFLIB) $(MODULES) $(OBJS) $(NMM_OBJS) $(NMM_MODULES) ; \
+                  $(MAKE) $(J) nmm_contrib  ; \
+                  $(AR) $(ARFLAGS) ../main/$(LIBWRFLIB) $(MODULES) $(OBJS) \
+                                   $(NMM_OBJS) $(NMM_MODULES) \
+                                   $(DIAGNOSTIC_MODULES_NMM) ; \
                 else                                                         \
-                  $(MAKE) $(J) non_nmm                                          ; \
-                  $(AR) $(ARFLAGS) ../main/$(LIBWRFLIB) $(MODULES) $(FIRE_MODULES) $(OBJS)             ; \
+                  $(MAKE) $(J) non_nmm      ; \
+                  $(AR) $(ARFLAGS) ../main/$(LIBWRFLIB) $(MODULES) $(OBJS) \
+                                   $(FIRE_MODULES) \
+                                   $(DIAGNOSTIC_MODULES_EM)  ; \
                 fi
 
 include ../configure.wrf
 
-nmm_contrib : $(NMM_OBJS) $(NMM_MODULES) $(MODULES) $(OBJS)
+nmm_contrib : $(NMM_OBJS) $(NMM_MODULES) $(MODULES) $(OBJS) $(DIAGNOSTIC_MODULES_NMM)
 
-non_nmm : $(MODULES) $(FIRE_MODULES) $(WIND_MODULES) $(OBJS)
+non_nmm : $(MODULES) $(FIRE_MODULES) $(WIND_MODULES) $(OBJS) $(DIAGNOSTIC_MODULES_EM)
 
 clean:
 	@ echo 'use the clean script'
