Some changes over the past few weeks have caused compilation issues for WRFDA. Need to if-def out some lines. Also, passing gwd_opt to 4DVAR routines.
git-svn-id: https://svn-wrf-model.cgd.ucar.edu/trunk@7316 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

--- a/external/fftpack/fftpack5/Makefile
+++ b/external/fftpack/fftpack5/Makefile
@@ -24,7 +24,9 @@ library: $(OBJ)
 	$(RANLIB) $(TARGET)
 
 .F.o:
-	$(FC) -c $(FFLAGS) $< 
+	$(CPP) $(CPPFLAGS) $*.F  > $*.f
+	$(FC) -c $(FFLAGS) $*.f
+	$(RM) -f $*.f
 
 clean:
 	rm -f $(OBJ) $(TARGET) *.obj
