save some intermediate change
git-svn-id: https://svn-wrf-model.cgd.ucar.edu/branches/PIO@7463 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

--- a/external/io_pio/Makefile
+++ b/external/io_pio/Makefile
@@ -1,6 +1,6 @@
 #makefile to build a wrf_io with PIO
 
-FCOPTIM         = -O3
+FCOPTIM         = -O0
 FCNOOPT         = -O0 -fno-inline -fno-ip
 FCDEBUG         = # -g $(FCNOOPT) -traceback # -fpe0 -check all -ftrapuv -unroll0 -u
 FORMAT_FIXED    = -FI
@@ -19,7 +19,7 @@ AR              = ar
 ARFLAGS         = ru
 M4              = m4
 RANLIB          = ranlib
-DM_FC           = mpfort
+DM_FC           = mpiifort
 FC              = $(DM_FC)
 
 OBJS    = wrf_data_pio.o wrf_io.o field_routines.o module_wrfsi_static.o
