--- a/phys/Makefile
+++ b/phys/Makefile
@@ -77,6 +77,7 @@ MODULES = \
 	module_mp_thompson.o \
 	module_mp_full_sbm.o \
 	module_mp_fast_sbm.o \
+	module_ltng_lpi.o \
 	module_mp_gsfcgce.o \
 	module_mp_morr_two_moment.o \
 	module_mp_milbrandt2mom.o \
