Fixed the issue of trying to read a variable which not included in input/bdy file, to allow execution to continue
git-svn-id: https://svn-wrf-model.cgd.ucar.edu/branches/PIO@7668 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

--- a/external/io_pio/Makefile
+++ b/external/io_pio/Makefile
@@ -1,9 +1,9 @@
 #makefile to build a wrf_io with PIO
 #$Id$
 
-FCOPTIM         = -O0
-FCNOOPT         = -O0 -fno-inline -fno-ip
-FCDEBUG         = # -g $(FCNOOPT) -traceback # -fpe0 -check all -ftrapuv -unroll0 -u
+FCOPTIM         = -O0 -g
+FCNOOPT         = -O0 -fno-inline -fno-ip -g
+FCDEBUG         =  -g $(FCNOOPT) -traceback # -fpe0 -check all -ftrapuv -unroll0 -u
 FORMAT_FIXED    = -FI
 FORMAT_FREE     = -FR
 FCSUFFIX        =
@@ -12,8 +12,6 @@ FCBASEOPTS_NO_G = -ip -fp-model precise -w -ftz -align all -fno-alias $(FORMAT_F
 FCBASEOPTS      = $(FCBASEOPTS_NO_G) $(FCDEBUG)
 FCFLAGS         = $(FCOPTIM) $(FCBASEOPTS)
 
-#PNETCDFPATH     = /glade/p/work/huangwei/lib/pnetcdf/1.3.1
-PIO_PATH        = /glade/p/work/huangwei/lib/pio/1.8.8
 TRADFLAG        = -traditional
 CPP             = /lib/cpp -P
 AR              = ar
@@ -25,9 +23,10 @@ FC              = $(DM_FC)
 
 OBJS    = wrf_data_pio.o pio_routines.o wrf_io.o field_routines.o read_bdy_routines.o module_wrfsi_static.o
 
-FFLAGS  = $(FCFLAGS) -I. -I$(PIO_PATH)/include -I../ioapi_share -I../../frame -I../esmf_time_f90
-LIBS    = -L$(PIO_PATH)/lib -lpio
-CPP1    = $(CPP) -P $(TRADFLAG)
+PIOPATH = /glade/p/work/huangwei/lib/intel
+FFLAGS  = $(FCFLAGS) -I. -I$(PIOPATH)/include -I../ioapi_share -I../../frame -I../esmf_time_f90
+LIBS    = -L$(PIOPATH)/lib -lpio
+CPP1    = $(CPP) -P $(TRADFLAG) -DINTSPECIAL
 M4      = m4 -Uinclude -Uindex -Ulen
 AR      = ar
 
@@ -41,27 +40,27 @@ libwrfio_pio.a:		$(OBJS) $(CODE)
 			$(RANLIB) libwrfio_pio.a
 
 wrf_data_pio.o:         wrf_data_pio.F90 $(CODE)
-			$(CPP1) -I. -I$(PIO_PATH)/include -I../ioapi_share wrf_data_pio.F90 > wrf_data_pio.f
+			$(CPP1) -I. -I$(PIOPATH)/include -I../ioapi_share wrf_data_pio.F90 > wrf_data_pio.f
 			$(FC) $(FFLAGS) -c wrf_data_pio.f
 
-pio_routines.o:		pio_routines.F90 $(CODE) wrf_data_pio.o field_routines.o read_bdy_routines.o
-			$(CPP1) -I. -I$(PIO_PATH)/include -I../ioapi_share pio_routines.F90 > pio_routines.f
+pio_routines.o:		pio_routines.F90 $(CODE) wrf_data_pio.o
+			$(CPP1) -I. -I$(PIOPATH)/include -I../ioapi_share pio_routines.F90 > pio_routines.f
 			$(FC) $(FFLAGS) -c pio_routines.f
 
-wrf_io.o:               wrf_io.F90 $(CODE) wrf_data_pio.o pio_routines.o read_bdy_routines.o field_routines.o
-			$(CPP1) -I. -I$(PIO_PATH)/include -I../ioapi_share wrf_io.F90 > wrf_io.f
+wrf_io.o:               wrf_io.F90 $(CODE) wrf_data_pio.o read_bdy_routines.o field_routines.o
+			$(CPP1) -I. -I$(PIOPATH)/include -I../ioapi_share wrf_io.F90 > wrf_io.f
 			$(FC) $(FFLAGS) -c wrf_io.f
 
 module_wrfsi_static.o:  module_wrfsi_static.F90
-			$(CPP1) -I. -I$(PIO_PATH)/include -I../ioapi_share module_wrfsi_static.F90 > module_wrfsi_static.f
+			$(CPP1) -I. -I$(PIOPATH)/include -I../ioapi_share module_wrfsi_static.F90 > module_wrfsi_static.f
 			$(FC) $(FFLAGS) -c module_wrfsi_static.f
 
 field_routines.o:	field_routines.F90 wrf_data_pio.o pio_routines.o
-			$(CPP1) -I. -I$(PIO_PATH)/include -I../ioapi_share field_routines.F90 > field_routines.f
+			$(CPP1) -I. -I$(PIOPATH)/include -I../ioapi_share field_routines.F90 > field_routines.f
 			$(FC) $(FFLAGS) -c field_routines.f
 
 read_bdy_routines.o:	read_bdy_routines.F90 wrf_data_pio.o pio_routines.o
-			$(CPP1) -I. -I$(PIO_PATH)/include -I../ioapi_share read_bdy_routines.F90 > read_bdy_routines.f
+			$(CPP1) -I. -I$(PIOPATH)/include -I../ioapi_share read_bdy_routines.F90 > read_bdy_routines.f
 			$(FC) $(FFLAGS) -c read_bdy_routines.f
 
 clean:	superclean
