--- a/phys/Makefile
+++ b/phys/Makefile
@@ -72,6 +72,7 @@ MODULES = \
 	module_mp_wsm5.o \
 	module_mp_wsm6.o \
 	module_mp_etanew.o \
+	module_mp_etanewhr.o \
         module_mp_etaold.o \
 	module_mp_HWRF.o \
 	module_mp_thompson.o \
