--- a/phys/Makefile
+++ b/phys/Makefile
@@ -58,6 +58,7 @@ MODULES = \
 	module_cu_bmj.o \
 	module_cu_kfeta.o \
 	module_cu_tiedtke.o\
+	module_cu_ntiedtke.o\
 	module_cu_gd.o \
 	module_cu_gf.o \
 	module_cu_nsas.o \
