Changes from John Michalakes for RRTMG and Thompson physics. 1.	RRTMG LW and SW  a.	Add new versions of the RRTMG_LW and SW packages.   i.	The proposal is to add new versions of the RRTMG LW and SW   packages that were ported to GPU under their DOE SciDAC project. The   developers of this RRTMG-GPU package are David Berthiaume and Mike   Iacono.   ii.	I have gone through what they provided and to make sure it's   ported and correct on normal CPUs and that it's thread-safe and   conforms to WRF rules for model layer physics routines.   A number of   array and loop restructurings that Berthiaume and Iacono did for GPU   performance are also beneficial on the CPU and MIC (and some aren't,   especially loop nest ordering; when necessary, this is switched at   compile time depending on whether the CPP preprocessor setting  _CUDA   is defined or not.  In the current proposed mods, _CUDA is not defined.   See 1.a.v.2, below.)   iii.	The packages are be added as ra_lw_physics=24 and ra_sw_physics=24   ; ra_lw_physics=4 and ra_sw_physics=4 are retained as-is and not   impacted (but see second proposal item)   iv.	Eventually, the '24' versions could replace the '4'   versions but they're being added as separate experimental versions   for time being   v.	Status of the new versions:    1.	They are correct but not bit for bit with the '4' versions    of the routines    2.	The GPU mode of operation has not been tested yet; this is    AER's responsibility     a.	once in the trunk the code will go back to them to review and     add configuration/build options     b.	building for GPU will require the PGI compilers (LW is CUDA     Fortran, SW is OpenACC)    3.	The CPU mode of operation is not currently faster on CPU than    the '4' versions right now but are ready for optimization (my    responsibility and continued work)    4.	Build mods for GPU and optimizations for both GPU and CPU may    be subject of further proposals during the "bug fix" release phase  b.	Thread safety mods to

--- a/phys/Makefile
+++ b/phys/Makefile
@@ -94,6 +94,8 @@ MODULES = \
 	module_ra_rrtm.o  \
 	module_ra_rrtmg_lw.o  \
 	module_ra_rrtmg_sw.o  \
+	module_ra_rrtmg_lwf.o  \
+	module_ra_rrtmg_swf.o  \
         module_ra_cam_support.o \
         module_ra_cam.o \
 	module_ra_gfdleta.o \
