>>>>>>>>>>>>>>WRFPLUS Branch Commit<<<<<<<<<<<<<
svn merge -r7837:7889 https://svn-wrf-model.cgd.ucar.edu/trunk .



git-svn-id: https://svn-wrf-model.cgd.ucar.edu/branches/WRFPLUSV3@7912 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

Former-commit-id: 48d91a135208c7d78818b020215ad60cfdd2d59c

--- a/phys/Makefile
+++ b/phys/Makefile
@@ -62,6 +62,7 @@ MODULES = \
 	module_cu_kf.o  \
 	module_cu_bmj.o \
 	module_cu_kfeta.o \
+	module_cu_mskf.o \
 	module_cu_tiedtke.o\
 	module_cu_ntiedtke.o\
 	module_cu_gd.o \
