Addition of hydrostatic rebalancing for cycled models (HRRR) which use the GSI for data assimilation, but don't rebalance the initial state (e.g., use the DFI).
git-svn-id: https://svn-wrf-model.cgd.ucar.edu/trunk@7972 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

--- a/dyn_em/Makefile
+++ b/dyn_em/Makefile
@@ -45,6 +45,7 @@ OBJS    = 		        \
 	solve_em.o              \
         start_em.o              \
         shift_domain_em.o       \
+        rebalance_cycl.o        \
         couple_or_uncouple_em.o \
         nest_init_utils.o	\
         adapt_timestep_em.o     \
