Some physics and chemistry additions from PNNL.
There are two new chemistry options

chem_opt 203: SAPRC99 + MOSAIC (8 bin aerosols) with aqueous chemistry
chem_opt 204: SAPRC99 + MOSAIC (8 bin aerosols) without aqueous chemistry


There is also a KF CuP convective parameterization (cu_physics = 10) that has been added.   This new cu_physics also has a chem_cup routine in the chemistry directory for 
the KFCUP parameterization that includes vertical transport, activation, cloud chemistry, etc. all for when running with chemistry.



git-svn-id: https://svn-wrf-model.cgd.ucar.edu/trunk@7983 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

--- a/chem/Makefile
+++ b/chem/Makefile
@@ -153,7 +153,8 @@ MODULES =                                 \
         module_sorgam_vbs_cloudchem.o     \
         module_cam_mam_gas_wetdep_driver.o \
         module_cam_mam_mo_sethet.o         \
-        module_phot_fastj.o
+        module_phot_fastj.o               \
+	module_chem_cup.o
 
 OBJS    =                           \
 	chemics_init.o              \
