>>>>>>>>>>>>>>WRFPLUS Branch Commit<<<<<<<<<<<<<
svn merge -r 7954:7985 https://svn-wrf-model.cgd.ucar.edu/trunk .

Minor changes to the following TL/AD codes
M       dyn_em/module_small_step_em_ad.F
M       dyn_em/module_small_step_em_tl.F
M       dyn_em/solve_em_ad.F
M       dyn_em/solve_em_tl.F
M       phys/module_pbl_driver_ad.F
M       phys/module_pbl_driver_tl.F
M       phys/module_physics_addtendc_tl.F



git-svn-id: https://svn-wrf-model.cgd.ucar.edu/branches/WRFPLUSV3@8087 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

Former-commit-id: 8e49ae6c85485d8d68283dd0f8040c8bd01d30d7

--- a/phys/Makefile
+++ b/phys/Makefile
@@ -38,7 +38,6 @@ MODULES = \
 	module_bl_gfs2011.o \
 	module_bl_myjpbl.o \
 	module_bl_qnsepbl.o \
-	module_bl_qnsepbl09.o \
 	module_bl_acm.o \
 	module_bl_mynn.o \
 	module_bl_fogdes.o \
@@ -75,6 +74,7 @@ MODULES = \
 	module_cu_du_ad.o \
 	module_cu_mesosas.o \
 	module_cu_osas.o \
+	module_cu_kfcup.o \
 	module_mp_radar.o \
 	module_mp_kessler.o \
 	module_mp_mkessler.o \
