--- a/dyn_em/Makefile
+++ b/dyn_em/Makefile
@@ -69,6 +69,7 @@ OBJS    = 		        \
         start_em_tl.o           \
         start_em_ad.o           \
         shift_domain_em.o       \
+        rebalance_cycl.o        \
         couple_or_uncouple_em.o \
         nest_init_utils.o	\
         adapt_timestep_em.o     \
