H15A-ozone: yet more changes to get ozone into the RRTMG, despite a big bug in gen_comms.c.  It works in domain 1, but not in nests.  I need to commit this almost-working code so I can check it out in another location.
git-svn-id: https://svn-wrf-model.cgd.ucar.edu/branches/H15A-ozone@8278 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

--- a/phys/Makefile
+++ b/phys/Makefile
@@ -166,7 +166,8 @@ MODULES = \
 	module_fddaobs_driver.o \
 	module_wind_fitch.o \
         module_sf_lake.o \
-	module_diagnostics_driver.o
+	module_diagnostics_driver.o \
+	module_ozmixm.o
 
 FIRE_MODULES = \
         module_fr_fire_driver.o \
