--- a/phys/Makefile
+++ b/phys/Makefile
@@ -65,6 +65,7 @@ MODULES = \
 	module_cu_gf.o \
 	module_cu_nsas.o \
 	module_cu_sas.o \
+	module_cu_scalesas.o \
 	module_cu_mesosas.o \
 	module_cu_osas.o \
 	module_cu_kfcup.o \
