==============WRFPLUS Branch Commit=============
Change the make rules for adBuffer.F to prevent it from
being removed on case-insensitive systems.

M    frame/Makefile


git-svn-id: https://svn-wrf-model.cgd.ucar.edu/branches/WRFPLUSV3@9442 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

Former-commit-id: 7f85665507676fea610acde6b39134dca00443e1

--- a/frame/Makefile
+++ b/frame/Makefile
@@ -177,11 +177,11 @@ adStack.o : adStack.c
 adBuffer.o : adBuffer.F
 	$(RM) $@
 	$(SED_FTN) $*.F > $*.b
-	$(CPP) $(CPPFLAGS) -I../inc $*.b  > $*.f
+	$(CPP) $(CPPFLAGS) -I../inc $*.b  > $*.for
 	$(RM) $*.b
 	$(RM) $@
-	$(SFC) -c $(FORMAT_FIXED) $(PROMOTION) $(FCNOOPT) $*.f
-	$(RM) adBuffer.f
+	$(SFC) -c $(FORMAT_FIXED) $(PROMOTION) $(FCNOOPT) $*.for
+	$(RM) adBuffer.for
 
 pack_utils.o :
 	$(CC) -c $(CFLAGS) -DIWORDSIZE=$(IWORDSIZE) pack_utils.c
