--- a/phys/Makefile
+++ b/phys/Makefile
@@ -62,7 +62,9 @@ MODULES = \
 	module_cu_tiedtke.o\
 	module_cu_ntiedtke.o\
 	module_cu_gd.o \
-	module_cu_gf.o \
+	module_cu_gf_deep.o \
+	module_cu_gf_sh.o \
+	module_cu_gfdrvr.o \
 	module_cu_nsas.o \
 	module_cu_sas.o \
 	module_cu_scalesas.o \
