Add -assume byterecl flag for Intel compilers to make CRTM work properly.
CRTM requires the flag -assume byterecl for Intel compilers
because of the direct access read of a long integer in
Binary_File_Utility.f90.

RECORDLENGTH    =       -assume byterecl
is added in arch/configure_new.defaults for ifort stanzas.
The flag is only used for compiling CRTM.

M       arch/configure_new.defaults
M       var/external/crtm_2.2.3/libsrc/makefile

--- a/var/external/crtm_2.2.3/libsrc/makefile
+++ b/var/external/crtm_2.2.3/libsrc/makefile
@@ -3,7 +3,7 @@ package = CRTM
 
 include ../../../../configure.wrf
 
-FCFLAGS_CRTM = $(FCFLAGS)
+FCFLAGS_CRTM = $(FCFLAGS) $(RECORDLENGTH)
 
 # The library name
 LIBRARY = lib$(package).a
@@ -30,9 +30,21 @@ include make.dependencies
 
 .f90.o:
 	$(SFC) -c $(FCFLAGS_CRTM) $<
+#	x=`echo "$(SFC)" | awk '{print $$1}'` ; export x ; \
+#        if [ $$x = "ifort" ] ; then \
+#           $(SFC) -c $(FCFLAGS_CRTM) -assume byterecl $< ; \
+#        else \
+#           $(SFC) -c $(FCFLAGS_CRTM) $< ; \
+#        fi
 
 .fpp.o:
 	$(RM) $@ $*.mod $*.f90
 	$(CPP) $(CPP_FLAGS) $< > $*.f90
 	$(SFC) $(FCFLAGS_CRTM) -c $*.f90
+#	x=`echo "$(SFC)" | awk '{print $$1}'` ; export x ; \
+#        if [ $$x = "ifort" ] ; then \
+#           $(SFC) $(FCFLAGS_CRTM) -assume byterecl -c $*.f90 ; \
+#        else \
+#           $(SFC) $(FCFLAGS_CRTM) -c $*.f90 ; \
+#        fi
 	$(RM) $*.f90
