Per feedback from Negin Sobhani, reducing the number of .gitignore files by adding *.f90 rule to top-level .gitignore, then adding exceptions in external/.gitignore and var/.gitignore.

--- a/external/.gitignore
+++ b/external/.gitignore
@@ -12,3 +12,6 @@
 # conventions than others                                                    #
 ##############################################################################
 *.f
+
+# Exceptions to top-level .gitignore: many external/ source code files use .f90 extension
+!*.f90
