--- a/var/.gitignore
+++ b/var/.gitignore
@@ -1,5 +1,5 @@
 # This is the top-level .gitignore file for the "var" directory for the      #
-# WRF Model                                                                  #
+# WRF Model, containing the code for WRFDA                                   #
 #                                                                            #
 # Filenames and wildcards added below will not be tracked by git anywhere in #
 # this directory or any of its subdirectories. Note that these rules will be #
