Git-specific updates: Adding new .gitignore files and rules, updating tools/update_fork.pl (#49)
TYPE: no impact

KEYWORDS: Git, .gitignore, update_fork.pl

SOURCE: internal

DESCRIPTION OF CHANGES:

One of the issues in both SVN and Git is that if you have compiled code, there will be hundreds, if not thousands, of unversioned files that pollute the display when you try to view the status of your working copy. In Git, this can be handled by .gitignore files: a list of file names (or wildcards) in these files will allow git to ignore these files when displaying, for example, the results of git status.

We have already added a few .gitignore files, this proposal adds a few other ones, and adds new rules to the existing files.

In addition, this change includes updates to the script tools/update_fork.pl. The previous version automatically changed to the master before performing the update: the script now prompts the user to switch to the master branch rather than doing it automatically. This should avoid some confusion users have had. In addition, the script now refuses to update if there are any changes to the local master (fast-forward merges only). This will also avoid messing up your fork's history in case you made changes to your fork's master branch.

LIST OF MODIFIED FILES:

M .gitignore
A external/.gitignore
A inc/.gitignore
A test/em_real/.gitignore
M tools/update_fork.pl
A var/.gitignore
A var/build/.gitignore

TESTS CONDUCTED: No standard tests necessary; does not impact compiled code. Looked at before and after of git status with WRF and WRFDA builds: hundreds of compile-time files are now successfully ignored. update_fork.pl now quits with a useful warning message if user attempts to run while not on the master branch.

--- a/external/.gitignore
+++ b/external/.gitignore
@@ -1,7 +1,9 @@
-# This is the top-level .gitignore file for the WRF model                    #
+# This is the top-level .gitignore file for the "external" directory for the #
+# WRF Model                                                                  #
 #                                                                            #
-# Filenames and wildcards added below will not be tracked by git in any      #
-# directory in the repository                                                #
+# Filenames and wildcards added below will not be tracked by git anywhere in #
+# this directory or any of its subdirectories. Note that these rules will be #
+# supplemented by rules in the top-level .gitignore file                     #
 #                                                                            #
 # Ignored file types should include executables, build-time temporary files, #
 # and other files which should not ever be added to the code repository.     #
@@ -9,10 +11,7 @@
 # USE CAUTION WHEN ADDING WILDCARDS, as some builds use different filename   #
 # conventions than others                                                    #
 ##############################################################################
-*.exe
-*.o
-*.mod
-*.a
-configure.wrf*
-*.backup
-*.f90
+*.f
+
+# Exceptions to top-level .gitignore: many external/ source code files use .f90 extension
+!*.f90
