adding hailcast option, which is now a physics option, and removing all hail options from afwa diagnostics

--- a/phys/Makefile
+++ b/phys/Makefile
@@ -183,8 +183,8 @@ FIRE_MODULES = \
   
 DIAGNOSTIC_MODULES_EM = \
 	module_diag_afwa.o \
-	module_diag_afwa_hail.o \
 	module_diag_cl.o \
+        module_diag_hailcast.o \
 	module_diag_misc.o \
 	module_diag_pld.o \
 	module_diag_zld.o
