--- a/phys/Makefile
+++ b/phys/Makefile
@@ -61,7 +61,7 @@ MODULES = \
 	module_cu_tiedtke.o\
 	module_cu_ntiedtke.o\
 	module_cu_gd.o \
-	module_cugf_wrfdrv.o \
+	module_cu_gf_wrfdrv.o \
 	module_cu_gf_deep.o \
 	module_cu_gf_sh.o \
 	module_cu_nsas.o \
