GF scheme update (#102)
* TYPE: enhancement

KEYWORDS: GF scheme

SOURCE: Georg Grell, Joseph B Olson (NOAA)

DESCRIPTION OF CHANGES:
This is a rework and clean-up of the GF parameterization. The original
module was broken into three pieces to be able to keep the routine for
deep and shallow convection identical between different models (used in
various regional and global models). The driver is wrf specific. Many
unused arrays were removed in the resulting three modules. Some options
were refined. Additionally, we added:
(1)	Momentum transport (as in ECMWF)
(2)	Different cloud water detrainment options (c1 constant)
(3)	A Beta PDF to approximate normalized vertical mass flux
(4)	If perturbation patterns can be supplied (temporal and special
correlations), 6 different stochastic options (4 for closure
assumptions, one for vertical mass flux, one for momentum transport)
The scale awareness has not changed, but in general this version will
produce different results. It is currently being evaluated in RAP, HWRF,
FIM, GFS, and a version of NASA's global model.
We are in the process of preparing a publication that will describe the
changes in more detail.

LIST OF MODIFIED FILES :
main/depend.common
phys/Makefile
phys/module_cu_gf.F
phys/module_cu_gf_deep.F
phys/module_cu_gf_sh.F
phys/module_cugf_wrfdrv.F
phys/module_cumulus_driver.F
phys/module_diag_afwa.F

TESTS CONDUCTED:
regression test passed.

* DESCRIPTION OF CHANGES:
Maintain the naming conventions: Changed "module_cugf_wrfdrv" to "module_cu_gf_wrfdrv".

LIST OF MODIFIED FILES :
modified:   ../main/depend.common
modified:   Makefile
renamed:    module_cugf_wrfdrv.F -> module_cu_gf_wrfdrv.F
modified:   module_cumulus_driver.F

TESTS CONDUCTED:
Compiled successfully on yellowstone

--- a/phys/Makefile
+++ b/phys/Makefile
@@ -61,7 +61,9 @@ MODULES = \
 	module_cu_tiedtke.o\
 	module_cu_ntiedtke.o\
 	module_cu_gd.o \
-	module_cu_gf.o \
+	module_cu_gf_wrfdrv.o \
+	module_cu_gf_deep.o \
+	module_cu_gf_sh.o \
 	module_cu_nsas.o \
 	module_cu_sas.o \
 	module_cu_scalesas.o \
