--- a/var/run/VARBC.in
+++ b/var/run/VARBC.in
@@ -1,5 +1,5 @@
   VARBC version 1.0 - Number of instruments: 
- 34
+ 35
  ------------------------------------------------
  Platform_id  Sat_id  Sensor_id  Nchanl  Npredmax
  ------------------------------------------------
@@ -2145,3 +2145,23 @@
   12    12  0  0  0  0  0 -1 -1 -1
   13    13  0  0  0  0  0 -1 -1 -1
   14    14  0  0  0  0  0 -1 -1 -1
+ ------------------------------------------------
+ Platform_id  Sat_id  Sensor_id  Nchanl  Npredmax
+ ------------------------------------------------
+ 31 8 56 10 8
+  -----> Bias predictor statistics:  Mean & Std & Nbgerr
+       0.0       0.0       0.0       0.0       0.0       0.0       0.0       0.0 
+       0.0       0.0       0.0       0.0       0.0       0.0       0.0       0.0
+     10000     10000     10000     10000     10000     10000     10000     10000
+  -----> Chanl_id Chanl_nb  Pred_use(-1/0/1)  Param
+   1     1  0  0  0  0  0 -1 -1 -1   2.100   0.000   0.000   0.000   0.000
+   2     2  0  0  0  0  0 -1 -1 -1   0.299   0.000  -0.001  -0.006   0.009
+   3     3  0  0  0  0  0 -1 -1 -1   0.516   0.001  -0.005   0.000   0.019
+   4     4  0  0  0  0  0 -1 -1 -1  -0.095  -0.005   0.001  -0.002   0.024
+   5     5  0  0  0  0  0 -1 -1 -1  -1.000   0.000   0.000   0.000   0.000
+   6     6  0  0  0  0  0 -1 -1 -1   0.000   0.000   0.000   0.000   0.000
+   7     7  0  0  0  0  0 -1 -1 -1  -0.800   0.000   0.000   0.000   0.000
+   8     8  0  0  0  0  0 -1 -1 -1  -0.600   0.000   0.000   0.000   0.000
+   9     9  0  0  0  0  0 -1 -1 -1  -1.000   0.000   0.000   0.000   0.000
+  10    10  0  0  0  0  0 -1 -1 -1  -2.000   0.000   0.000   0.000   0.000
+  
