On branch wrfplus_v4:    1. rename adtl to wrftladj    2. move also 4 non-linear phyiscs modules into wrftladj    3. inital work for wrfplus build mechanism
 Changes committed:
	modified:   Makefile
	modified:   Registry/Registry.EM
	new file:   Registry/Registry.EM_COMMON.tladj
	new file:   Registry/Registry.tladj
	modified:   clean
	modified:   compile
	renamed:    adtl/Makefile -> wrftladj/Makefile
	renamed:    adtl/adBuffer.F -> wrftladj/adBuffer.F
	renamed:    adtl/adStack.c -> wrftladj/adStack.c
	renamed:    adtl/depend.adtl -> wrftladj/depend.wrftladj
	renamed:    adtl/jcdfi.F -> wrftladj/jcdfi.F
	renamed:    adtl/mediation_pertmod_io.F -> wrftladj/mediation_pertmod_io.F
	renamed:    adtl/module_adtl_grid_utilities.F -> wrftladj/module_adtl_grid_utilities.F
	renamed:    adtl/module_advect_em_ad.F -> wrftladj/module_advect_em_ad.F
	renamed:    adtl/module_advect_em_tl.F -> wrftladj/module_advect_em_tl.F
	renamed:    adtl/module_bc_ad.F -> wrftladj/module_bc_ad.F
	renamed:    adtl/module_bc_em_ad.F -> wrftladj/module_bc_em_ad.F
	renamed:    adtl/module_bc_em_tl.F -> wrftladj/module_bc_em_tl.F
	renamed:    adtl/module_bc_tl.F -> wrftladj/module_bc_tl.F
	renamed:    adtl/module_big_step_utilities_em_ad.F -> wrftladj/module_big_step_utilities_em_ad.F
	renamed:    adtl/module_big_step_utilities_em_tl.F -> wrftladj/module_big_step_utilities_em_tl.F
	renamed:    adtl/module_bl_gwdo_ad.F -> wrftladj/module_bl_gwdo_ad.F
	renamed:    adtl/module_bl_gwdo_tl.F -> wrftladj/module_bl_gwdo_tl.F
	renamed:    adtl/module_bl_surface_drag.F -> wrftladj/module_bl_surface_drag.F
	renamed:    adtl/module_bl_surface_drag_ad.F -> wrftladj/module_bl_surface_drag_ad.F
	renamed:    adtl/module_bl_surface_drag_tl.F -> wrftladj/module_bl_surface_drag_tl.F
	renamed:    adtl/module_cu_du.F -> wrftladj/module_cu_du.F
	renamed:    adtl/module_cu_du_ad.F -> wrftladj/module_cu_du_ad.F
	renamed:    adtl/module_cu_du_tl.F -> wrftladj/module_cu_du_tl.F
	renamed:    adtl/module_cumulus_driver_ad.F 

--- a/wrftladj/Makefile
+++ b/wrftladj/Makefile
@@ -6,7 +6,7 @@ RM      =       rm -f
 
 # 12 dyn_em pairs
 
-DYN_EM_ADTL =                               \
+DYN_EM_ADTL =                          \
         module_advect_em_tl.o           \
         module_advect_em_ad.o           \
         module_diffusion_em_tl.o        \
@@ -38,16 +38,16 @@ DYN_EM_ADTL =                               \
 PHYS_ADTL = \
 	module_bl_gwdo_tl.o \
 	module_bl_gwdo_ad.o \
-	../phys/module_bl_surface_drag.o \
+	module_bl_surface_drag.o \
 	module_bl_surface_drag_tl.o \
 	module_bl_surface_drag_ad.o \
-	../phys/module_cu_du.o \
+	module_cu_du.o \
 	module_cu_du_tl.o \
 	module_cu_du_ad.o \
-	../phys/module_mp_mkessler.o \
+	module_mp_mkessler.o \
 	module_mp_mkessler_tl.o \
 	module_mp_mkessler_ad.o \
-	../phys/module_mp_nconvp.o \
+	module_mp_nconvp.o \
 	module_mp_nconvp_tl.o \
 	module_mp_nconvp_ad.o \
 	module_physics_addtendc_tl.o \
@@ -89,18 +89,16 @@ adBuffer.o : adBuffer.F
 
 OBJS    =
 
-LIBTARGET    =  adtl
+LIBTARGET    =  wrftladj
 TARGETDIR    =  ./
 
-$(LIBTARGET) :  $(DYN_EM_ADTL) $(PHYS_ADTL) $(FRAME_ADTL) $(SHARE_ADTL)
-                  $(MAKE) $(J) non_nmm      ; \
-                  $(AR) $(ARFLAGS) ../main/$(LIBWRFLIB) $(MODULES) $(OBJS) \
-                                   $(FIRE_MODULES) \
-                                   $(DIAGNOSTIC_MODULES_EM)  ; \
+#$(LIBTARGET) :  $(DYN_EM_ADTL) $(PHYS_ADTL) $(FRAME_ADTL) $(SHARE_ADTL)
+#                  $(MAKE) $(J) non_nmm      ; \
+#                  $(AR) $(ARFLAGS) ../main/$(LIBWRFLIB) $(MODULES) $(OBJS) \
+#                                   $(FIRE_MODULES) \
+#                                   $(DIAGNOSTIC_MODULES_EM)  ; \
 
 include ../configure.wrf
-
-non_nmm : $(MODULES) $(FIRE_MODULES) $(WIND_MODULES) $(OBJS) $(DIAGNOSTIC_MODULES_EM)
 
 clean:
 	@ echo 'use the clean script'
@@ -108,4 +106,4 @@ clean:
 # DEPENDENCIES : only dependencies after this line (don't remove the word DEPENDENCIES)
 # DO NOT DELETE
 
-include depend.adtl
+include depend.wrftladj
