--- a/frame/Makefile
+++ b/frame/Makefile
@@ -10,7 +10,6 @@ MODULES =       module_driver_constants.o  \
                 module_domain_type.o       \
                 module_streams.o           \
                 module_domain.o            \
-                module_integrate.o         \
                 module_timing.o            \
                 module_configure.o         \
                 module_tiles.o             \
@@ -83,6 +82,10 @@ LIBTARGET    =  framework
 TARGETDIR    =  ./
 $(LIBTARGET) :  $(MODULES) $(OBJS) $(SPECIAL) $(NLOBJS) $(ALOBJS)
 		$(AR) $(ARFLAGS) ../main/$(LIBWRFLIB) $(MODULES) $(OBJS) $(NLOBJS) $(ALOBJS)
+		$(RANLIB) ../main/$(LIBWRFLIB)
+
+module_integrate : module_integrate.o
+		$(AR) $(ARFLAGS) ../main/$(LIBWRFLIB) module_integrate.o
 		$(RANLIB) ../main/$(LIBWRFLIB)
 
 nl_set_0_routines.o : nl_access_routines.F module_configure.o
